--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -5,56 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balanced Undecimal Calculator</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Computer+Modern+Serif&display=swap');
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@400;700&display=swap');
 
-        body {
-            font-family: 'Arial', sans-serif; /* Brutalist Helvetica-like font */
-            text-align: center;
-            margin-top: 50px;
-            background-color: #f4f4f4;
-        }
+    body {
+        font-family: 'Arial', sans-serif; /* Brutalist Helvetica-like font */
+        text-align: center;
+        margin-top: 50px;
+        background-color: #f4f4f4;
+    }
 
-        .calculator {
-            display: inline-block;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+    .calculator {
+        display: inline-block;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-        button {
-            padding: 10px 20px;
-            margin: 5px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007BFF;
-            color: #fff;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            font-family: 'Arial', sans-serif; /* Brutalist Helvetica-like font */
-        }
+    button {
+        padding: 10px 20px;
+        margin: 5px;
+        border: none;
+        border-radius: 5px;
+        background-color: #007BFF;
+        color: #fff;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        font-family: 'Arial', sans-serif; /* Brutalist Helvetica-like font */
+    }
 
-        button[data-undecimal] {
-    font-family: 'Noto Sans Armenian', sans-serif;
-}
+    button[data-undecimal], input, footer {
+        font-family: 'Noto Sans Armenian', sans-serif; /* Armenian font for undecimal symbols */
+    }
 
+    input {
+        width: 200px;
+        padding: 10px;
+        margin: 5px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
 
-        input {
-            width: 200px;
-            padding: 10px;
-            margin: 5px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
+    footer {
+        margin-top: 20px;
+        font-size: 0.8em;
+        color: #888;
+    }
+</style>
 
-        footer {
-            margin-top: 20px;
-            font-size: 0.8em;
-            color: #888;
-        }
-    </style>
 </head>
 
 <body>
