--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -85,7 +85,7 @@
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: o.p6
+            Version: o.pL
         </footer>
     </div>
 
@@ -99,200 +99,86 @@
             'p': 1, 'b': 2, 'm': 3, '7': 4, '9': 5
         };
 
-        // Convert from balanced undecimal to unbalanced base 11
-        function balancedToUnbalanced(undecimalStr) {
-            let unbalancedStr = '';
-            for (let char of undecimalStr) {
-                let value = undecimalValues[char];
-                if (value < 0) {
-                    value += 11;
-                }
-                unbalancedStr += value.toString();
-            }
-            return unbalancedStr;
-        }
-
-        // Convert from unbalanced base 11 to decimal
-        function unbalancedToDecimal(unbalancedStr) {
+        function balancedToDecimal(undecimalStr) {
             let decimalValue = 0;
-            for (let i = 0; i < unbalancedStr.length; i++) {
-                decimalValue = decimalValue * 11 + parseInt(unbalancedStr[i]);
+            let base = 1;
+            for (let i = undecimalStr.length - 1; i >= 0; i--) {
+                decimalValue += undecimalValues[undecimalStr[i]] * base;
+                base *= 11;
             }
             return decimalValue;
         }
 
-        // Convert from decimal to unbalanced base 11
-        function decimalToUnbalanced(decimalValue) {
-            let unbalancedStr = '';
+        function decimalToBalanced(decimalValue) {
+            if (decimalValue === 0) return 'o';
+            let undecimalStr = '';
             while (decimalValue !== 0) {
                 let remainder = decimalValue % 11;
                 decimalValue = Math.floor(decimalValue / 11);
-                unbalancedStr = remainder.toString() + unbalancedStr;
+                if (remainder > 5) {
+                    remainder -= 11;
+                    decimalValue += 1;
+                } else if (remainder < -5) {
+                    remainder += 11;
+                    decimalValue -= 1;
+                }
+                undecimalStr = undecimalSymbols[remainder + 5] + undecimalStr;
             }
-            // Ensure that we have at least as many digits as the input
-            while (unbalancedStr.length < 2) {
-                unbalancedStr = '0' + unbalancedStr;
-            }
-            return unbalancedStr;
+            return undecimalStr;
         }
-
-        // Convert from unbalanced base 11 to balanced undecimal
-        function unbalancedToBalanced(unbalancedStr) {
-    let undecimalStr = '';
-    let carry = 0;
-    for (let i = unbalancedStr.length - 1; i >= 0; i--) {
-        let value = parseInt(unbalancedStr[i]) + carry;
-        if (value > 5) {
-            value -= 11;
-            carry = 1;
-        } else if (value < -5) {
-            value += 11;
-            carry = -1;
-        } else {
-            carry = 0;
-        }
-        undecimalStr = undecimalSymbols[value + 5] + undecimalStr;
-    }
-    // If there's still a carry after processing all digits
-    if (carry !== 0) {
-        undecimalStr = undecimalSymbols[carry + 5] + undecimalStr;
-    }
-    return undecimalStr;
-}
-
 
         // Perform the arithmetic operations and display the result
         function calculate() {
-    const inputField = document.getElementById('inputField');
-    const inputStr = inputField.value;
+            const inputField = document.getElementById('inputField');
+            const inputStr = inputField.value;
 
-    let operands, operation;
-    if (inputStr.includes('+')) {
-        operands = inputStr.split('+');
-        operation = '+';
-    } else if (inputStr.includes('×')) {
-        operands = inputStr.split('×');
-        operation = '×';
-    } else if (inputStr.includes('/')) {
-        operands = inputStr.split('/');
-        operation = '/';
-    } else {
-        return;
-    }
-
-    const operand1Decimal = unbalancedToDecimal(balancedToUnbalanced(operands[0]));
-    const operand2Decimal = unbalancedToDecimal(balancedToUnbalanced(operands[1]));
-
-    let resultDecimal;
-    switch (operation) {
-        case '+':
-            resultDecimal = operand1Decimal + operand2Decimal;
-            break;
-        case '×':
-            resultDecimal = operand1Decimal * operand2Decimal;
-            break;
-        case '/':
-            resultDecimal = operand1Decimal / operand2Decimal;
-            break;
-    }
-
-    const resultUndecimal = unbalancedToBalanced(decimalToUnbalanced(resultDecimal));
-
-    document.getElementById('outputField').value = resultUndecimal;
-}
-
-
-
-        <script>
-    // Define the symbols and their corresponding values
-    const undecimalSymbols = ['6', 'L', 'w', 'd', 'q', 'o', 'p', 'b', 'm', '7', '9'];
-    const undecimalValues = {
-        '6': -5, 'L': -4, 'w': -3, 'd': -2, 'q': -1,
-        'o': 0,
-        'p': 1, 'b': 2, 'm': 3, '7': 4, '9': 5
-    };
-
-    function balancedToDecimal(undecimalStr) {
-        let decimalValue = 0;
-        let base = 1;
-        for (let i = undecimalStr.length - 1; i >= 0; i--) {
-            decimalValue += undecimalValues[undecimalStr[i]] * base;
-            base *= 11;
-        }
-        return decimalValue;
-    }
-
-    function decimalToBalanced(decimalValue) {
-        if (decimalValue === 0) return 'o';
-        let undecimalStr = '';
-        while (decimalValue !== 0) {
-            let remainder = decimalValue % 11;
-            decimalValue = Math.floor(decimalValue / 11);
-            if (remainder > 5) {
-                remainder -= 11;
-                decimalValue += 1;
-            } else if (remainder < -5) {
-                remainder += 11;
-                decimalValue -= 1;
+            let operands, operation;
+            if (inputStr.includes('+')) {
+                operands = inputStr.split('+');
+                operation = '+';
+            } else if (inputStr.includes('×')) {
+                operands = inputStr.split('×');
+                operation = '×';
+            } else if (inputStr.includes('/')) {
+                operands = inputStr.split('/');
+                operation = '/';
+            } else {
+                return;
             }
-            undecimalStr = undecimalSymbols[remainder + 5] + undecimalStr;
-        }
-        return undecimalStr;
-    }
 
-    // Perform the arithmetic operations and display the result
-    function calculate() {
-        const inputField = document.getElementById('inputField');
-        const inputStr = inputField.value;
+            const operand1Decimal = balancedToDecimal(operands[0]);
+            const operand2Decimal = balancedToDecimal(operands[1]);
 
-        let operands, operation;
-        if (inputStr.includes('+')) {
-            operands = inputStr.split('+');
-            operation = '+';
-        } else if (inputStr.includes('×')) {
-            operands = inputStr.split('×');
-            operation = '×';
-        } else if (inputStr.includes('/')) {
-            operands = inputStr.split('/');
-            operation = '/';
-        } else {
-            return;
+            let resultDecimal;
+            switch (operation) {
+                case '+':
+                    resultDecimal = operand1Decimal + operand2Decimal;
+                    break;
+                case '×':
+                    resultDecimal = operand1Decimal * operand2Decimal;
+                    break;
+                case '/':
+                    resultDecimal = operand1Decimal / operand2Decimal;
+                    break;
+            }
+
+            const resultUndecimal = decimalToBalanced(resultDecimal);
+
+            document.getElementById('outputField').value = resultUndecimal;
         }
 
-        const operand1Decimal = balancedToDecimal(operands[0]);
-        const operand2Decimal = balancedToDecimal(operands[1]);
-
-        let resultDecimal;
-        switch (operation) {
-            case '+':
-                resultDecimal = operand1Decimal + operand2Decimal;
-                break;
-            case '×':
-                resultDecimal = operand1Decimal * operand2Decimal;
-                break;
-            case '/':
-                resultDecimal = operand1Decimal / operand2Decimal;
-                break;
+        // Append a symbol to the input field
+        function appendToInput(symbol) {
+            const inputField = document.getElementById('inputField');
+            inputField.value += symbol;
         }
 
-        const resultUndecimal = decimalToBalanced(resultDecimal);
-
-        document.getElementById('outputField').value = resultUndecimal;
-    }
-
-    // Append a symbol to the input field
-    function appendToInput(symbol) {
-        const inputField = document.getElementById('inputField');
-        inputField.value += symbol;
-    }
-
-    // Clear the input and output fields
-    function clearInput() {
-        const inputField = document.getElementById('inputField');
-        inputField.value = '';
-        document.getElementById('outputField').value = '';
-    }
-</script>
-
+        // Clear the input and output fields
+        function clearInput() {
+            const inputField = document.getElementById('inputField');
+            inputField.value = '';
+            document.getElementById('outputField').value = '';
+        }
+    </script>
 </body>
 </html>
