--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -41,17 +41,14 @@
         }
 
         /* Adjust button colors based on their associated values */
-        button[data-undecimal="6"] { background-color: #000; } /* -5 */
-        button[data-undecimal="L"] { background-color: #333; } /* -4 */
-        button[data-undecimal="w"] { background-color: #666; } /* -3 */
-        button[data-undecimal="d"] { background-color: #999; } /* -2 */
-        button[data-undecimal="q"] { background-color: #ccc; } /* -1 */
-        button[data-undecimal="o"] { background-color: #fff; color: #000; } /* 0 */
-        button[data-undecimal="p"] { background-color: #ccc; } /* 1 */
-        button[data-undecimal="b"] { background-color: #999; } /* 2 */
-        button[data-undecimal="m"] { background-color: #666; } /* 3 */
-        button[data-undecimal="7"] { background-color: #333; } /* 4 */
-        button[data-undecimal="9"] { background-color: #000; } /* 5 */
+button[data-undecimal="o"] { background-color: #000; color: #fff; } /* 0 */
+    button[data-undecimal="q"], button[data-undecimal="p"] { background-color: #f2f2f2; } /* lightest gray */
+    button[data-undecimal="d"], button[data-undecimal="b"] { background-color: #d9d9d9; } /* second lightest gray */
+    button[data-undecimal="w"], button[data-undecimal="m"] { background-color: #b0b0b0; } /* middle gray */
+    button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #808080; } /* second darkest gray */
+    button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #4d4d4d; } /* darkest gray */
+    button[data-undecimal="L"] { font-style: italic; } /* Italicize L button */
+    button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #fff; color: #000; } /* function keys */
 
         input {
             width: 200px;
