--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -34,7 +34,6 @@
         button {
             padding: 10px 20px;
             margin: 5px;
-            background-color: #000; /* Default to black */
             color: #fff;
             cursor: pointer;
             transition: background-color 0.3s;
@@ -42,11 +41,11 @@
 
         /* Adjust button colors based on their associated values */
 button[data-undecimal="o"] { background-color: #000; color: #fff; } /* 0 */
-    button[data-undecimal="q"], button[data-undecimal="p"] { background-color: #f2f2f2; } /* lightest gray */
-    button[data-undecimal="d"], button[data-undecimal="b"] { background-color: #d9d9d9; } /* second lightest gray */
-    button[data-undecimal="w"], button[data-undecimal="m"] { background-color: #b0b0b0; } /* middle gray */
-    button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #808080; } /* second darkest gray */
-    button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #4d4d4d; } /* darkest gray */
+    button[data-undecimal="q"], button[data-undecimal="p"] { background-color: #E5E4E2; } /* lightest gray */
+    button[data-undecimal="d"], button[data-undecimal="b"] { background-color: #D3D3D3; } /* second lightest gray */
+    button[data-undecimal="w"], button[data-undecimal="m"] { background-color: #C0C0C0; } /* middle gray */
+    button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #A9A9A9; } /* second darkest gray */
+    button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #71797E; } /* darkest gray */
     button[data-undecimal="L"] { font-style: italic; } /* Italicize L button */
     button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #fff; color: #000; } /* function keys */
 
