--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -95,7 +95,7 @@ button[data-undecimal="o"] { background-color: #000; color: #fff; } /* 0 */
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: o.pw
+            Version: o.pd
         </footer>
     </div>
 
