--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -40,14 +40,14 @@
         }
 
         /* Adjust button colors based on their associated values */
-button[data-undecimal="o"] { background-color: #000; color: #fff; } /* 0 */
-    button[data-undecimal="q"], button[data-undecimal="p"] { background-color: #E5E4E2; } /* lightest gray */
-    button[data-undecimal="d"], button[data-undecimal="b"] { background-color: #D3D3D3; } /* second lightest gray */
-    button[data-undecimal="w"], button[data-undecimal="m"] { background-color: #C0C0C0; } /* middle gray */
-    button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #A9A9A9; } /* second darkest gray */
-    button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #71797E; } /* darkest gray */
-    button[data-undecimal="L"] { font-style: italic; } /* Italicize L button */
-    button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #fff; color: #000; } /* function keys */
+        button[data-undecimal="o"] { background-color: #000; color: #fff; } /* 0 */
+        button[data-undecimal="q"], button[data-undecimal="p"] { background-color: #E5E4E2; } /* lightest gray */
+        button[data-undecimal="d"], button[data-undecimal="b"] { background-color: #D3D3D3; } /* second lightest gray */
+        button[data-undecimal="w"], button[data-undecimal="m"] { background-color: #C0C0C0; } /* middle gray */
+        button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #A9A9A9; } /* second darkest gray */
+        button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #71797E; } /* darkest gray */
+        button[data-undecimal="L"] { font-style: italic; } /* Italicize L button */
+        button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #fff; color: #000; } /* function keys */
 
         input {
             width: 200px;
@@ -64,6 +64,9 @@ button[data-undecimal="o"] { background-color: #000; color: #fff; } /* 0 */
         }
     </style>
 </head>
+
+
+
 
 
 
@@ -95,7 +98,7 @@ button[data-undecimal="o"] { background-color: #000; color: #fff; } /* 0 */
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: o.pd
+            Version: o.pq
         </footer>
     </div>
 
