--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -94,7 +94,7 @@
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: o.p
+            Version: o.pp
         </footer>
     </div>
 
