--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -62,6 +62,9 @@
             margin-top: 20px;
             font-size: 0.8em;
         }
+        h2 {
+    font-family: Arial, sans-serif; /* Changed to Arial (Helvetica-like) */
+        }
     </style>
 </head>
 
@@ -94,7 +97,7 @@
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: o.pp
+            Version: o.pb
         </footer>
     </div>
 
