--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -79,22 +79,22 @@
         <button data-undecimal="7" onclick="appendToInput('7')">7</button>
         <button data-undecimal="9" onclick="appendToInput('9')">9</button>
         <br>
-        <button data-undecimal="d" onclick="appendToInput('d')">d</button>
-        <button data-undecimal="q" onclick="appendToInput('q')">q</button>
-        <button data-undecimal="p" onclick="appendToInput('p')">p</button>
-        <button data-undecimal="b" onclick="appendToInput('b')">b</button>
+        <button data-undecimal="w" onclick="appendToInput('w')">d</button>
+        <button data-undecimal="d" onclick="appendToInput('d')">q</button>
+        <button data-undecimal="b" onclick="appendToInput('b')">p</button>
+        <button data-undecimal="m" onclick="appendToInput('m')">b</button>
         <br>
-        <button data-undecimal="w" onclick="appendToInput('w')">w</button>
+        <button data-undecimal="q" onclick="appendToInput('q')">w</button>
         <button data-undecimal="o" onclick="appendToInput('o')">o</button>
-        <button onclick="clearInput()">C</button>
         <button data-undecimal="m" onclick="appendToInput('m')">m</button>
         <br>
         <button onclick="appendToInput('×')">×</button>
         <button onclick="appendToInput('+')">+</button>
         <button onclick="appendToInput('/')">/</button>
-        <button onclick="calculate()">=</button>
         <br>
+        <button onclick="calculate()">=</button>
         <input type="text" id="outputField" readonly>
+        <button onclick="clearInput()">C</button>
         <br>
         <footer>
             Version: o.pb
