--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -73,6 +73,7 @@
     <div class="calculator">
         <h2>Balanced Undecimal Calculator</h2>
         <input type="text" id="inputField" placeholder="Enter calculation">
+        <button onclick="clearInput()">C</button>
         <br>
         <button data-undecimal="6" onclick="appendToInput('6')">6</button>
         <button data-undecimal="L" onclick="appendToInput('L')">L</button>
@@ -94,10 +95,9 @@
         <br>
         <button onclick="calculate()">=</button>
         <input type="text" id="outputField" readonly>
-        <button onclick="clearInput()">C</button>
         <br>
         <footer>
-            Version: o.pb
+            Version: o.p7
         </footer>
     </div>
 
