--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -75,14 +75,14 @@
         <input type="text" id="inputField" placeholder="Enter calculation">
         <button onclick="clearInput()">C</button>
         <br>
-        <button data-undecimal="6" onclick="appendToInput('6')">w</button>
+        <button data-undecimal="6" onclick="appendToInput('6')">6</button>
         <button data-undecimal="o" onclick="appendToInput('o')">o</button>
-        <button data-undecimal="9" onclick="appendToInput('9')">m</button>
+        <button data-undecimal="9" onclick="appendToInput('9')">9</button>
         <br>
-        <button data-undecimal="L" onclick="appendToInput('L')">6</button>
-        <button data-undecimal="w" onclick="appendToInput('w')">L</button>
-        <button data-undecimal="m" onclick="appendToInput('m')">7</button>
-        <button data-undecimal="7" onclick="appendToInput('7')">9</button>
+        <button data-undecimal="L" onclick="appendToInput('L')">L</button>
+        <button data-undecimal="w" onclick="appendToInput('w')">w</button>
+        <button data-undecimal="m" onclick="appendToInput('m')">m</button>
+        <button data-undecimal="7" onclick="appendToInput('7')">7</button>
         <br>
         <button data-undecimal="d" onclick="appendToInput('d')">d</button>
         <button data-undecimal="q" onclick="appendToInput('q')">q</button>
@@ -97,7 +97,7 @@
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: o.p9
+            Version: o.b6
         </footer>
     </div>
 
