--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -45,7 +45,7 @@
         button[data-undecimal="d"], button[data-undecimal="b"] { background-color: #D3D3D3; } /* second lightest gray */
         button[data-undecimal="w"], button[data-undecimal="m"] { background-color: #C0C0C0; } /* middle gray */
         button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #A9A9A9; } /* second darkest gray */
-        button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #71797E; } /* darkest gray */
+        button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #808080; } /* darkest gray */
         button[data-undecimal="L"] { font-style: italic; } /* Italicize L button */
         button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #fff; color: #000; } /* function keys */
 
@@ -97,7 +97,7 @@
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: o.b6
+            Version: o.bL
         </footer>
     </div>
 
