--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -40,12 +40,12 @@
         }
 
         /* Adjust button colors based on their associated values */
-        button[data-undecimal="o"] { background-color: #fff; color: #000; border: 1px solid #808080; } /* 0 */
-        button[data-undecimal="q"], button[data-undecimal="p"] { background-color: #E5E4E2; color: #000; } /* lightest gray */
+        button[data-undecimal="o"] { background-color: #fff; color: #000; border : solid #808080; } /* 0 */
+        button[data-undecimal="q"], button[data-undecimal="p"] { background-color: #E5E4E2; color: #000000; } /* lightest gray */
         button[data-undecimal="d"], button[data-undecimal="b"] { background-color: #D3D3D3; } /* second lightest gray */
         button[data-undecimal="w"], button[data-undecimal="m"] { background-color: #C0C0C0; } /* middle gray */
-        button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #A9A9A9; } /* second darkest gray */
-        button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #808080; } /* darkest gray */
+        button[data-undecimal="L"], button[data-undecimal="7"] { background-color: #A9A9A9; color: #FFFFFF; } /* second darkest gray */
+        button[data-undecimal="6"], button[data-undecimal="9"] { background-color: #808080; color: #FFFFFF; } /* darkest gray */
         button[data-undecimal="L"] { font-style: italic; } /* Italicize L button */
         button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #fff; color: #000; } /* function keys */
 
