--- a/recipes/Calcb.html
+++ b/recipes/Calcb.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balanced Undecimal Scientific Calculator</title>
+    <title>Balanced Tridecimal Calculator</title>
     <link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/6.1.1/big.min.js"></script>
 
-    <style> 
+    <style>
         body, button, input, footer {
             font-family: 'Kurale', serif;
             background-color: #fff;
@@ -27,6 +26,11 @@
             height: 100vh;
         }
 
+        .calculator {
+            padding: 20px;
+            border: 1px solid #000;
+        }
+
         button {
             padding: 10px 20px;
             margin: 5px;
@@ -34,6 +38,9 @@
             transition: background-color 0.3s;
             border: 2px solid #000;
         }
+
+        /* Adjust button colors based on their associated values */
+        /* [Updated with new symbols and colors] */
 
         input {
             width: 200px;
@@ -44,123 +51,90 @@
             color: #000;
         }
 
-        .row {
-            display: flex;
-            justify-content: center;
+        footer {
+            margin-top: 20px;
+            font-size: 0.8em;
         }
-
-        .row .button-container {
-            margin: 5px;
-        }
-
-        .row:nth-child(5) .button-container {
-            transform: translateY(-20px);
-        }
-        /* ... [same general styles as before] ... */
-        .calculator {
-            padding: 20px;
-            border: 1px solid #000;
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            grid-gap: 10px;
+        h2 {
+            font-family: Arial, sans-serif;
         }
     </style>
 </head>
 
 <body>
     <div class="calculator">
-        <h2>Balanced Undecimal Scientific Calculator</h2>
+        <h2>Balanced Tridecimal Calculator</h2>
         <input type="text" id="inputField" placeholder="Enter calculation">
-
-        <button onclick="appendToInput('cos(')">cos</button>
-        <button data-undecimal="9" onclick="appendToInput('9')">9</button>
-        <button data-undecimal="d" onclick="appendToInput('d')">d</button>
-        <button data-undecimal="b" onclick="appendToInput('b')">b</button>
-        <button onclick="appendToInput('e')">e</button>
-
-        <button onclick="appendToInput('sin(')">sin</button>
-        <button data-undecimal="L" onclick="appendToInput('L')">L</button>
-        <button onclick="appendToInput('×')">×</button>
-        <button data-undecimal="o" onclick="appendToInput('o')">o</button>
-        <button onclick="appendToInput('^')">^</button>
-
-        <button onclick="appendToInput('tan(')">tan</button>
-        <button data-undecimal="w" onclick="appendToInput('w')">w</button>
-        <button data-undecimal="q" onclick="appendToInput('q')">q</button>
-        <button data-undecimal="p" onclick="appendToInput('p')">p</button>
-        <button onclick="appendToInput('π')">π</button>
-
-        <button data-undecimal="6" onclick="appendToInput('6')">6</button>
-        <button onclick="appendToInput('/')">/</button>
         <button onclick="clearInput()">C</button>
-        <button data-undecimal="m" onclick="appendToInput('m')">m</button>
-        <button onclick="appendToInput('log(')">log</button>
-
-        <button onclick="appendToInput('sqrt(')">√</button>
+        <br>
+        <button data-tridecimal="9" onclick="appendToInput('9')">9</button>
+        <button data-tridecimal="L" onclick="appendToInput('L')">L</button>
+        <button data-tridecimal="w" onclick="appendToInput('w')">w</button>
+        <button data-tridecimal="u" onclick="appendToInput('u')">u</button>
+        <br>
+        <button data-tridecimal="d" onclick="appendToInput('d')">d</button>
+        <button data-tridecimal="q" onclick="appendToInput('q')">q</button>
+        <button data-tridecimal="0" onclick="appendToInput('0')">0</button>
+        <button data-tridecimal="p" onclick="appendToInput('p')">p</button>
+        <br>
+        <button data-tridecimal="b" onclick="appendToInput('b')">b</button>
+        <button data-tridecimal="n" onclick="appendToInput('n')">n</button>
+        <button data-tridecimal="m" onclick="appendToInput('m')">m</button>
+        <button data-tridecimal="7" onclick="appendToInput('7')">7</button>
+        <br>
+        <button data-tridecimal="6" onclick="appendToInput('6')">6</button>
+        <button onclick="appendToInput('×')">×</button>
         <button onclick="appendToInput('+')">+</button>
+        <button onclick="appendToInput('/')">/</button>
+        <br>
         <button onclick="calculate()">=</button>
-        <button data-undecimal="7" onclick="appendToInput('7')">7</button>
-
         <input type="text" id="outputField" readonly>
+        <br>
         <footer>
-            Version: o.p7
+            Version: 0.bL
         </footer>
     </div>
 
-
-
-
     <script>
-        const undecimalSymbols = ['6', 'L', 'w', 'd', 'q', 'o', 'p', 'b', 'm', '7', '9'];
-        const undecimalValues = {
-            '6': -5, 'L': -4, 'w': -3, 'd': -2, 'q': -1,
-            'o': 0,
-            'p': 1, 'b': 2, 'm': 3, '7': 4, '9': 5
+        // Define the symbols and their corresponding values for balanced tridecimal
+        const tridecimalSymbols = ['9', 'L', 'w', 'u', 'd', 'q', '0', 'p', 'b', 'n', 'm', '7', '6'];
+        const tridecimalValues = {
+            '9': -6, 'L': -5, 'w': -4, 'u': -3, 'd': -2, 'q': -1,
+            '0': 0,
+            'p': 1, 'b': 2, 'n': 3, 'm': 4, '7': 5, '6': 6
         };
 
-        function balancedToDecimal(undecimalStr) {
-            let decimalValue = new Big(0);
-            let base = new Big(1);
-            for (let i = undecimalStr.length - 1; i >= 0; i--) {
-                decimalValue = decimalValue.plus(base.times(undecimalValues[undecimalStr[i]]));
-                base = base.times(11);
+        function balancedToDecimal(tridecimalStr) {
+            let decimalValue = 0;
+            let base = 1;
+            for (let i = tridecimalStr.length - 1; i >= 0; i--) {
+                decimalValue += tridecimalValues[tridecimalStr[i]] * base;
+                base *= 13;
             }
             return decimalValue;
         }
 
         function decimalToBalanced(decimalValue) {
-            if (decimalValue.eq(0)) return 'o';
-            let undecimalStr = '';
-            while (!decimalValue.eq(0)) {
-                let remainder = decimalValue.mod(11);
-                decimalValue = decimalValue.div(11).floor();
-                if (remainder.gt(5)) {
-                    remainder = remainder.minus(11);
-                    decimalValue = decimalValue.plus(1);
-                } else if (remainder.lt(-5)) {
-                    remainder = remainder.plus(11);
-                    decimalValue = decimalValue.minus(1);
+            if (decimalValue === 0) return '0';
+            let tridecimalStr = '';
+            while (decimalValue !== 0) {
+                let remainder = decimalValue % 13;
+                decimalValue = Math.floor(decimalValue / 13);
+                if (remainder > 6) {
+                    remainder -= 13;
+                    decimalValue += 1;
+                } else if (remainder < -6) {
+                    remainder += 13;
+                    decimalValue -= 1;
                 }
-                undecimalStr = undecimalSymbols[remainder.plus(5).toNumber()] + undecimalStr;
+                tridecimalStr = tridecimalSymbols[remainder + 6] + tridecimalStr;
             }
-            return undecimalStr;
+            return tridecimalStr;
         }
 
-        function calculate() {
-            const inputField = document.getElementById('inputField');
-            let inputStr = inputField.value;
 
-            // Handle scientific functions
-            inputStr = inputStr.replace(/cos\(([^)]+)\)/g, (_, match) => Math.cos(balancedToDecimal(match).toNumber()));
-            inputStr = inputStr.replace(/sin\(([^)]+)\)/g, (_, match) => Math.sin(balancedToDecimal(match).toNumber()));
-            inputStr = inputStr.replace(/tan\(([^)]+)\)/g, (_, match) => Math.tan(balancedToDecimal(match).toNumber()));
-            inputStr = inputStr.replace(/log\(([^)]+)\)/g, (_, match) => Math.log(balancedToDecimal(match).toNumber()));
-            inputStr = inputStr.replace(/sqrt\(([^)]+)\)/g, (_, match) => Math.sqrt(balancedToDecimal(match).toNumber()));
-            inputStr = inputStr.replace(/pi/g, Math.PI);
-            inputStr = inputStr.replace(/e/g, Math.E);
 
-            // ... [same logic as before for basic operations] ...
-// Perform the arithmetic operations and display the result
+        // Perform the arithmetic operations and display the result
         function calculate() {
             const inputField = document.getElementById('inputField');
             const inputStr = inputField.value;
@@ -198,17 +172,15 @@
             const resultUndecimal = decimalToBalanced(resultDecimal);
 
             document.getElementById('outputField').value = resultUndecimal;
-                    }
-            const resultUndecimal = decimalToBalanced(resultDecimal);
-
-            document.getElementById('outputField').value = resultUndecimal;
         }
 
+        // Append a symbol to the input field
         function appendToInput(symbol) {
             const inputField = document.getElementById('inputField');
             inputField.value += symbol;
         }
 
+        // Clear the input and output fields
         function clearInput() {
             const inputField = document.getElementById('inputField');
             inputField.value = '';
