--- a/recipes/Calcb.html
+++ b/recipes/Calcb.html
@@ -67,31 +67,33 @@
         <input type="text" id="inputField" placeholder="Enter calculation">
         <button onclick="clearInput()">C</button>
         <br>
-        <button data-tridecimal="9" onclick="appendToInput('9')">9</button>
-        <button data-tridecimal="L" onclick="appendToInput('L')">L</button>
-        <button data-tridecimal="w" onclick="appendToInput('w')">w</button>
-        <button data-tridecimal="u" onclick="appendToInput('u')">u</button>
-        <br>
-        <button data-tridecimal="d" onclick="appendToInput('d')">d</button>
-        <button data-tridecimal="q" onclick="appendToInput('q')">q</button>
-        <button data-tridecimal="0" onclick="appendToInput('0')">0</button>
-        <button data-tridecimal="p" onclick="appendToInput('p')">p</button>
-        <br>
-        <button data-tridecimal="b" onclick="appendToInput('b')">b</button>
-        <button data-tridecimal="n" onclick="appendToInput('n')">n</button>
-        <button data-tridecimal="m" onclick="appendToInput('m')">m</button>
-        <button data-tridecimal="7" onclick="appendToInput('7')">7</button>
-        <br>
-        <button data-tridecimal="6" onclick="appendToInput('6')">6</button>
         <button onclick="appendToInput('×')">×</button>
         <button onclick="appendToInput('+')">+</button>
         <button onclick="appendToInput('/')">/</button>
+        <br>
+        <button data-tridecimal="d" onclick="appendToInput('d')">d</button>
+        <button data-tridecimal="q" onclick="appendToInput('q')">q</button>
+        <button data-tridecimal="p" onclick="appendToInput('p')">p</button>
+        <button data-tridecimal="b" onclick="appendToInput('b')">b</button>
+        <br>
+        <button data-tridecimal="0" onclick="appendToInput('0')">0</button>
+        <br>
+        <button data-tridecimal="w" onclick="appendToInput('w')">w</button>
+        <button data-tridecimal="u" onclick="appendToInput('u')">u</button>
+        <button data-tridecimal="n" onclick="appendToInput('n')">n</button>
+        <button data-tridecimal="m" onclick="appendToInput('m')">m</button>
+        <br>
+        <button data-tridecimal="9" onclick="appendToInput('9')">9</button>
+        <button data-tridecimal="L" onclick="appendToInput('L')">L</button>
+        <button data-tridecimal="7" onclick="appendToInput('7')">m</button>
+        <button data-tridecimal="6" onclick="appendToInput('6')">6</button>
+        <br>
         <br>
         <button onclick="calculate()">=</button>
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: 0.bL
+            Version: 0.0p
         </footer>
     </div>
 
